Syntaxe/Test/Invalide/tokens_mots_reserves.deca
// Description:
//    tests de l'ensemble des mots réservés.
//    test_lex ne doit pas donner d'erreur.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//
// Historique:
//    crée le 08/01/2012

cast
class
extends
else
elsif
false
if
instanceof
new
null
readInt
readFloat
print
println
protected
return
this
true
while
